# SigDrop

./: Cargo.toml  README.md
src/: entrypoint.rs  errors.rs  lib.rs
src/instructions/: claim.rs  ed25519_call.rs  mod.rs
src/states/: utils.rs
tests/: sig_drop_test.ts  tests.rs
