[package]
name = "sig_drop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.4.0"
shank = "0.4.2"
solana-ed25519-program = "3.0.0"
solana-program = "3.0.0"

[dev-dependencies]
solana-sdk = "2.2.1"
mollusk-svm = "0.2.0"
mollusk-svm-bencher = "0.2.0" 
litesvm = "0.8.1"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
